--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.4",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
