--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.1",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
@@ -24,7 +25,8 @@
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "serve-favicon": "^2.5.0",
-    "stripe": "^13.5.0"
+    "stripe": "^13.5.0",
+    "uuid": "^9.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
