--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-scripts": "5.0.1",
     "serve-favicon": "^2.5.0",
     "stripe": "^13.5.0",
+    "twilio": "^4.18.1",
     "uuid": "^9.0.1"
   },
   "scripts": {
