--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bcrypt": "^5.1.1",
-    "bootstrap": "^5.3.1",
+    "bootstrap": "^5.3.2",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -22,10 +22,11 @@
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.5",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.8.0",
+    "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-rating": "^2.0.5",
+    "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "serve-favicon": "^2.5.0",
