--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-image-zoom": "^1.3.1",
     "react-rating": "^2.0.5",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.15.0",
@@ -32,7 +33,8 @@
     "serve-favicon": "^2.5.0",
     "stripe": "^13.5.0",
     "twilio": "^4.18.1",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "zoom": "^0.0.2"
   },
   "scripts": {
     "build": "CI=false react-scripts build",
