--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-image-magnify": "^2.7.4",
     "react-image-zoom": "^1.3.1",
     "react-rating": "^2.0.5",
     "react-router-bootstrap": "^0.26.2",
