--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
-    "react-image-magnify": "^2.7.4",
     "react-image-zoom": "^1.3.1",
     "react-rating": "^2.0.5",
     "react-router-bootstrap": "^0.26.2",
@@ -34,8 +33,7 @@
     "serve-favicon": "^2.5.0",
     "stripe": "^13.5.0",
     "twilio": "^4.18.1",
-    "uuid": "^9.0.1",
-    "zoom": "^0.0.2"
+    "uuid": "^9.0.1"
   },
   "scripts": {
     "build": "CI=false react-scripts build",
